--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
-include LICENSE VERSION README.rst
+include LICENSE
+include VERSION
+include README.rst
+include replyify/data/cacert-2017-01-18.pem
+recursive-include docs *
